# wk-backend

./: .flaskenv  README.rst  env.example  setup.cfg  setup.py
.github/workflows/: tests.yml
src/wk/: api.py  app.py  auth.py  cli.py  config.py  db.py  errors.py  schema.py
src/wk/utils/: auth.py  http.py  pagination.py  views.py
tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_hello.py  test_resource_event_collection.py  test_resource_event_item.py  test_resource_user_item.py
