[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist docs

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[coverage:run]
omit =
    tests/*
    docs/*

[flake8]
max-line-length = 88
extend-ignore = E203
